# Audios

./: .gitignore  README.md  build-lame.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xslczx/audios/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame_jni.c  lame_jni.h
app/src/main/java/com/encoder/lame/: LameNative.java
app/src/main/java/com/xslczx/audios/: AudioException.java  AudioProcessor.java  Config.java  EncoderFactory.java  MainActivity.kt
app/src/main/java/com/xslczx/audios/datas/: AudioDecodeInfo.java  AudioException.java  Config.java
app/src/main/java/com/xslczx/audios/decoder/: AudioDecodeTaskManager.java  AudioDecoderConcatenator.java
app/src/main/java/com/xslczx/audios/encoder/: AacEncoder.java  AmrNbEncoder.java  AmrWbEncoder.java  AudioDecodeInfo.java  Encoder.java  EncoderFactory.java  FlacEncoder.java  MediaCodecEncoder.java  Mp3Encoder.java  OggOpusEncoder.java  ProgressListener.java  ThreeGpEncoder.java  WavEncoder.java
app/src/main/java/com/xslczx/audios/morse/: MorseAudio.java  MorseCoder.java
app/src/main/java/com/xslczx/audios/othertest/: AmrNbEncoder.java  AmrWbEncoder.java  OggOpusEncoder.java  ThreeGpEncoder.java
app/src/main/java/com/xslczx/audios/pcm/: AITailPcmAppender.java  PcmEffectProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/xslczx/audios/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
